tests/rosetta/out/Rust/array-concatenation.error
rustc: exit status 1
error[E0599]: `Vec<i32>` doesn't implement `std::fmt::Display`
  --> /tmp/array-concatenation.rs:25:56
   |
25 |     println!("{}", vec![format!("{}", concatInts(a, b).to_string())].into_iter().filter(|s| !s.is_empty()).collect::<Vec<_>>().join(" ") );
   |                                                        ^^^^^^^^^ `Vec<i32>` cannot be formatted with the default formatter
   |
   = note: the following trait bounds were not satisfied:
           `Vec<i32>: std::fmt::Display`
           which is required by `Vec<i32>: ToString`
           `[i32]: std::fmt::Display`
           which is required by `[i32]: ToString`
   = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead

error[E0308]: mismatched types
  --> /tmp/array-concatenation.rs:27:32
   |
27 |     let mut j: Vec<i32> = vec!["Crosby", "Stills", "Nash", "Young"];
   |                                ^^^^^^^^ expected `i32`, found `&str`

error[E0599]: `Vec<i32>` doesn't implement `std::fmt::Display`
  --> /tmp/array-concatenation.rs:28:55
   |
28 |     println!("{}", vec![format!("{}", concatAny(i, j).to_string())].into_iter().filter(|s| !s.is_empty()).collect::<Vec<_>>().join(" ") );
   |                                                       ^^^^^^^^^ `Vec<i32>` cannot be formatted with the default formatter
   |
   = note: the following trait bounds were not satisfied:
           `Vec<i32>: std::fmt::Display`
           which is required by `Vec<i32>: ToString`
           `[i32]: std::fmt::Display`
           which is required by `[i32]: ToString`
   = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead

error[E0599]: `Vec<i32>` doesn't implement `std::fmt::Display`
  --> /tmp/array-concatenation.rs:31:56
   |
31 |     println!("{}", vec![format!("{}", concatInts(l, m).to_string())].into_iter().filter(|s| !s.is_empty()).collect::<Vec<_>>().join(" ") );
   |                                                        ^^^^^^^^^ `Vec<i32>` cannot be formatted with the default formatter
   |
   = note: the following trait bounds were not satisfied:
           `Vec<i32>: std::fmt::Display`
           which is required by `Vec<i32>: ToString`
           `[i32]: std::fmt::Display`
           which is required by `[i32]: ToString`
   = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0308, E0599.
For more information about an error, try `rustc --explain E0308`.
